[project]
name = "wp-plugin1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simone", email = "simone.giacomelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

#[tool.setuptools.packages.find]
#where = ["src"]
[tool.hatch.build.targets.wheel]
packages = ["src/wwwpy_plugins"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
