[project]
name = "wwwpy-plugins-discovery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simone", email = "simone.giacomelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
